* Removed the creating of a custom logo from admin panel pack * Made changes to the admin bar to use the correct heights preventing slight 1px overlap from menubar in the adminbar

--- a/assets/stylesheets/less/wappack-admin.less
+++ b/assets/stylesheets/less/wappack-admin.less
@@ -1307,7 +1307,7 @@ TABLE OF CONTENTS:
     ------------------------------------------------------------------------------*/
 
     html.wp-toolbar {
-        padding-top: 56px;
+        padding-top: 57px;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
