--- a/assets/stylesheets/less/wappack-adminmenu.less
+++ b/assets/stylesheets/less/wappack-adminmenu.less
@@ -29,7 +29,7 @@
 
   #adminmenuwrap {
 	position: fixed;
-	top: 56px;
+	top: 57px;
 	bottom: 0;
 	border-width: 0 1px 0 0;
 	border-style: solid;
