--- a/assets/stylesheets/less/wappack-wpadminbar.less
+++ b/assets/stylesheets/less/wappack-wpadminbar.less
@@ -43,9 +43,9 @@ html.wp-toolbar {
 .navbar-fixed-top .navbar-inner {
   background-color: #303030;
   background-image: none;
-  border: 1px solid #2a2a2a;
+  border-bottom: 1px solid #2a2a2a;
   padding: 0 15px;
-  height: 54px;
+  height: 56px;
 }
 
 .navbar .nav > li {
@@ -101,15 +101,6 @@ html.wp-toolbar {
   background: #fff;
   .border-radius(14px);
   margin: 0 10px 0 0;
-}
-
-.wappack-logo > .ab-item {
-    width: 32px;
-    height: 32px;
-    margin: 12px 15px 0 0;
-    background-image: url(../images/wappack-logo.png);
-    background-position: 0 0;
-    background-repeat: no-repeat
 }
 
 /*.wappack-admin #wpadminbar .ab-sub-wrapper, .wappack-admin #wpadminbar ul, .wappack-admin #wpadminbar ul li {
